--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -39,12 +39,13 @@
     </div>
     <nav class="nav flex-column">
       <a class="nav-link active" href="#"><i class="bi bi-house-door"></i> Dashboard</a>
-      <a class="nav-link" href="#"><i class="bi bi-box-seam"></i> Productos</a>
-      <a class="nav-link" href="#"><i class="bi bi-people"></i> Clientes</a>
-      <a class="nav-link" href="#"><i class="bi bi-clipboard-data"></i> Ventas</a>
-      <a class="nav-link" href="#"><i class="bi bi-person-gear"></i> Usuarios</a>
+      <a class="nav-link" href="dashboard.html"><i class="bi bi-house-door"></i> Dashboard</a>
+      <a class="nav-link" href="productos.html"><i class="bi bi-box-seam"></i> Productos</a>
+      <a class="nav-link" href="clientes.html"><i class="bi bi-people"></i> Clientes</a>
+      <a class="nav-link" href="ventas.html"><i class="bi bi-clipboard-data"></i> Ventas</a>
+      <a class="nav-link" href="usuarios.html"><i class="bi bi-person-gear"></i> Usuarios</a>
       <a class="nav-link" href="#" onclick="logout()"><i class="bi bi-door-closed"></i> Salir</a>
-    </nav>
+      </nav>
   </div>
   
   <div class="main-content">
